# Fast-GPT

./: .gitignore  LICENSE  Procfile  README.md  fly.toml  pyproject.toml
app/: main.py
app/templates/: chat.html  chat_box.html  chat_messages.html  login.html
static/: manifest.json  service-worker.js
